// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GenBank export can export a feature with subfeatures (mRNA, CDS, exon) 1`] = `
"LOCUS       chr1:1001..2000      1000 bp        DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..1000
                     /name="gene2"
     mRNA            1..1000
                     /gene="gene2"
                     /name="mrna1"
     CDS             join(51..150,851..950)
                     /mRNA="mrna1"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      241 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      301 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      361 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      421 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      481 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      541 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      601 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      661 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      721 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      781 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      841 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      901 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      961 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export can export a simple feature 1`] = `
"LOCUS       chr1:101..200        100 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..100
                     /name="gene1"
                     /Name="gene_name"
                     /note="some note"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export formats ORIGIN section with proper line breaks for long sequences 1`] = `
"LOCUS       chr1:1..150          150 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..150
                     /name="gene7"
ORIGIN
        1 acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt
       61 acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt
      121 acgtacgtac gtacgtacgt acgtacgtac
//"
`;

exports[`GenBank export handles custom attributes 1`] = `
"LOCUS       chr1:701..800        100 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..100
                     /name="gene6"
                     /custom_tag="custom_value"
                     /another_tag="val1,val2"
                     /complex_obj="{"key":"value"}"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export handles features on negative strand 1`] = `
"LOCUS       chr1:501..600        100 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            complement(1..100)
                     /name="gene5"
     mRNA            complement(1..100)
                     /gene="gene5"
                     /name="mrna2"
     CDS             complement(21..80)
                     /mRNA="mrna2"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export handles mRNA with only exons (no CDS) 1`] = `
"LOCUS       chr1:1..500          500 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..500
                     /name="gene11"
     mRNA            1..500
                     /gene="gene11"
                     /name="mrna4"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      241 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      301 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      361 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      421 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      481 aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export handles multiple top-level features 1`] = `
"LOCUS       chr1:101..400        300 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..100
                     /name="gene3"
     gene            201..300
                     /name="gene4"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      241 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export handles single CDS without join() wrapper 1`] = `
"LOCUS       chr1:101..300        200 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     gene            1..200
                     /name="gene8"
     mRNA            1..200
                     /gene="gene8"
                     /name="mrna3"
     CDS             21..180
                     /mRNA="mrna3"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa
//"
`;

exports[`GenBank export truncates long feature type names to 16 characters 1`] = `
"LOCUS       chr1:1..100          100 bp         DNA       linear    UNK 10-JAN-1970
FEATURES             Location/Qualifiers
     very_long_featur1..100
                     /name="gene9"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//"
`;
